Fix #10, Diff overflow formatting.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -195,6 +195,11 @@ ul {
   padding: 1em;
 }
 
+.box > div.diff-container {
+  padding: 0;
+  overflow-x: auto;
+}
+
 .lineno-left, .lineno-right {
   text-align: right;
   color: #999;
